Adiciona a estrutura do body com header, main e footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Guaraná Jesus</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
