Adiciona HTML e CSS do header

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
-
+        <img src="./img/menu-burger.svg" alt="Menu hamburger">
+    <span>MENU</span>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
