fundo, logo e h2 juntos com suas estruturas no css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <span>MENU</span>
     </header>
     <main>
-
+        <img src="./img/jesus.png" alt="Guaraná Jesus" class="jesus">
+        <h2 class="text">Things go better with</h2>
+        <img src="img/logo_guarana_jesus.png" alt="logo do Guaraná" class="background-logo">
     </main>
     <footer>
 
