Adiciona responsividade com media queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="img/logo_guarana_jesus.png" alt="logo do Guaraná" class="background-logo">
     </main>
     <footer>
-
+        <div></div>
+        <span>Hugo Alves Vieira</span>
+        <img src="./img/map.svg" alt="mapa">
     </footer>
     
 </body>
